fix(app): dark mode colors

--- a/src/index.css
+++ b/src/index.css
@@ -36,18 +36,13 @@
 
   [data-colorblind='true'] {
     --theme-green: #5c8fee;
-    --theme-red: #ae262a;
-    --theme-gold: #bf8700;
-  }
-
-  [data-theme='dark'][data-colorblind='true'] {
-    --theme-green: #c8e2ff;
-    --theme-red: #5c8fee;
-    --theme-gold: #d29922;
   }
 
   html {
-    font-family: Plus Jakarta Sans, system-ui, sans-serif;
+    font-family:
+      Plus Jakarta Sans,
+      system-ui,
+      sans-serif;
     @apply bg-theme-7;
   }
 }
